[package]
name = "threatpool"
version = "0.3.0"
edition = "2021"
description = "Threatpool is a simple thread pool"
authors = ["Kleinmarb <kleinmarb@skiff.com>"]
keywords = ["threadpool", "thread", "parallelism"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Kleinmarb/threatpool"
documentation = "https://docs.rs/threatpool"
repository = "https://github.com/Kleinmarb/threatpool"
readme = "README.md"
rust-version = "1.75.0"

[dependencies]

[profile.release]
opt-level = 3
debug = false
lto = "fat"
incremental = false
codegen-units = 1
